--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  line-height: 1.5;
-  font-size: 16px;
   background-color: rgb(217, 198, 171);
 }
 
@@ -31,12 +29,12 @@ p {
 
 ul,
 ol {
+  list-style: none;
   margin: 0;
   padding: 0;
 }
 
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
+button {
+  cursor: pointer;
+  font-family: inherit;
 }
